# linux2rest

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.rs
.github/workflows/: build.yml
src/: main.rs  pages.rs
src/cli/: mod.rs
src/features/: kernel.rs  kernel_buffer.rs  kernel_websocket.rs  mod.rs  model.rs  netstat.rs  platform.rs  raspberry.rs  serial.rs  system.rs  udev.rs
src/features/platform/: mod.rs  raspberry.rs
src/html/: index.html
src/logger/: mod.rs
src/recorder/: mod.rs
src/server/: mod.rs  pages.rs  websocket.rs
