[package]
name = "linux2rest"
version = "0.2.2"
authors = ["Patrick José Pereira <patrickelectric@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.10"
actix-web = "3.3"
actix-web-actors = "3.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.8"
lazy_static = "1.4"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
structopt = { version = "0.3", default-features = false }

#Features
netstat2 = "0.9"
paperclip = { git = "https://github.com/patrickelectric/paperclip", branch = "patrick-swagger-url", features = ["actix", "chrono", "swagger-ui", "url"] }
pnet = "0.27.2"
notify = { version = "4.0", optional = true }
rmesg = { version = "1.0.14", features = ["extra-traits", "sync"] }
rppal = { version = "0.11.3", optional = true }
udev = "0.6"
sysinfo = "0.19"

[build-dependencies]
reqwest = {version = "0.11", features = ["blocking"]}
vergen = {version = "4", default-features = false, features = ["build", "git"]}

[features]
raspberry = ["notify", "rppal"]
