[package]
name = "linux2rest"
version = "0.4.5"
authors = ["Patrick José Pereira <patrickelectric@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.10"
actix-web = "3.3"
actix-web-actors = "3.0"
cached = "0.38.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.8"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
structopt = { version = "0.3", default-features = false }

#Features
netstat2 = "0.9"
paperclip = { version = "0.6.1", features = ["actix", "chrono", "swagger-ui", "url"] }
pnet = "0.27.2"
notify = { version = "4.0", optional = true }
rmesg = { version = "1.0.14", features = ["extra-traits", "sync"] }
rppal = { version = "0.13", optional = true }
serialport = {version = "4.2.0", features = ["serde"]}
sysinfo = "0.24"
udev = "0.6"

[build-dependencies]
reqwest = {version = "0.11", features = ["blocking"]}
vergen = {version = "4", default-features = false, features = ["build", "git"]}

[features]
raspberry = ["notify", "rppal"]
