[package]
name = "linux2rest"
version = "0.5.1"
authors = ["Patrick José Pereira <patrickelectric@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.10"
actix-web = "3.3"
actix-web-actors = "3.0"
anyhow = "1.0.80"
cached = "0.38.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
lazy_static = "1.4"
serde = "1.0"
serde_json = "1.0"
structopt = { version = "0.3", default-features = false }
tokio = "1"
tracing = { version = "0.1.40", features = ["log", "async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-log = "0.2.0"
tracing-actix-web = "0.7.9"
tracing-tracy = { version = "0.10.5", features = ["ondemand", "broadcast"] } # Note that these features defines the tracy client behavior.

# This is a custom revision adding file name suffix on top of tracing-appender-0.2.2" "0.2.2", but compatible with the current tracing version.
# Reference: https://github.com/tokio-rs/tracing/issues/2441
tracing-appender = { git = "https://github.com/joaoantoniocardoso/tracing", branch = "tracing-appender-0.2.2-with-filename-suffix" }

#Features
netstat2 = "0.9"
paperclip = { version = "0.6.1", features = ["actix", "chrono", "swagger-ui", "url"] }
pnet = "0.27.2"
notify = { version = "4.0", optional = true }
rmesg = { version = "1.0.14", features = ["extra-traits", "sync"] }
rppal = { version = "0.13", optional = true }
serialport = {version = "4.2.0", features = ["serde"]}
sinais = "0.1.0"
sysinfo = "0.29.8"
udev = "0.6"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"


[build-dependencies]
reqwest = {version = "0.11", features = ["blocking"]}
vergen = {version = "4", default-features = false, features = ["build", "git"]}

[features]
raspberry = ["notify", "rppal"]
